FE/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0 !important;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; */
} 

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#page-body {
    /* background-color: white !important; */
    /* background-image: linear-gradient(#EBF9EE 60%, white) !important; */
}

/* HOMEPAGE NAVBAR STYLING -------------------------- */

.nb-col{
    background-color: #353a40 !important;
}

.navbar-image {
    height: 64px !important;
    width: 116px !important;
    margin-top: -10px !important;
    margin-bottom: -10px !important;
    margin-left: -50px !important;
}

.navlink-hp {
color: #e5e5e5 !important;
font-family: 'Lato', sans-serif;
font-size: 17px;
letter-spacing: 2.5px;
margin-right: 30px;
position: relative;
}

.nav-link {
    color: white !important;
}

.nav-link:hover { 
  color: #72ad6d !important;
}

.navbar-links {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.btn-hollow-nb-button {
    border-color: white !important;
    border-radius: 5px !important;
    color:white !important;
    font-family: 'Lato', sans-serif !important;
    font-size: 12px !important;
    letter-spacing: 1.5px !important;
    width: auto !important;
    /* margin-top: 20px !important; */
    /* margin-bottom: -20px !important; */
}

.btn-hollow-nb-button:hover {
    background: #72ad6d !important;
    border-color: #72ad6d !important;
    color: black !important;
}

.btn-full-nb-button {
    border-color: #3FA637 !important;
    background-color:#3FA637 !important;
    border-radius: 5px !important;
    color:white !important;
    font-family: 'Lato', sans-serif !important;
    font-size: 12px !important;
    letter-spacing: 1.5px !important;
    width: auto !important;
}

.btn-full-nb-button:hover {
    background: #72ad6d !important;
    border-color: #72ad6d!important;
}

/* ------------------------------------------ */

/* STUDENT NAVBAR STYLING -------------------------- */

.thumbnail-image {
    height: 50px;
    width: 50px;
    margin-top: -10px;
    margin-bottom: -10px;
    border-radius: 50%;
}

.thumbnail-image:hover{
    box-shadow: 0 0 5px white;
}

.navbar-image-full {
    height: 46px;
    width: 291px;
    margin-top: -5px;
    margin-bottom: -5px;
    margin-left: -50px;
}

.navlink-sp {
    color: white !important;
    font-family: 'Lato', sans-serif;
    font-size: 17px !important;
    letter-spacing: 2px;
    margin-right: 30px;
    margin-top: 4px;
    /* position: relative; */
}

.dropdown-toggle {
    display: inline-flex !important;
    align-items: center !important;
}

.down-nb {
    font-family: 'Lato', sans-serif !important;
    letter-spacing: 0 !important;
    color:dimgray !important;
}

.down-nb:hover {
    background-color: #d2f2d0 !important;
    color: black !important;
}

.nb-nametag{
    font-family: 'Lato', sans-serif !important;
    color:white !important;
    margin-top: 4px;
    margin-right: 15px;
}

/* ------------------------------------------ */

/* --- HOMEPAGE STYLING ---------------------- */
.aplus{
    color: #3FA637;
    font-family: 'Lato', sans-serif;
    font-size: 90px;
    letter-spacing: 3px;
    position: relative;
    font-weight: bold;
}

.tutors{
    color:black;
    font-family: 'Lato', sans-serif;
    font-size: 90px;
    letter-spacing: 10px;
    position: relative;
    margin-top: -50px;
    font-weight: bold;
}

.subtitle{
    color: #3FA637;
    font-family: 'Raleway';
    font-size: 30px;
    letter-spacing: 2px;
    position: relative;
    font-weight: lighter;
    margin-top: -33px;
}

.body-text{
    color: #423F3E;
    font-family: 'Raleway';
    font-size: 20px;
    position:relative;
}

.body-link{
    color: #3FA637;
    font-weight: bolder;
    text-decoration: none;
}

.body-link:hover{
    color: #3FA637;
    font-weight: lighter;
}

.btn-options{
    border-radius: 10px !important;
    border-width: 1.5px !important;
    border-color: white !important;
    /* font-family: 'Lato', sans-serif !important; */
    font-weight:600 !important;
    font-family: 'Raleway' !important;
    /* box-shadow: 1px 8px 18px -5px rgba(0,0,0,0.48) !important; */
    /* font-weight: 500; */
    font-size: 18px !important;
    margin-right: 20px !important;
    margin-top: 15px !important;
    /* height: 75px !important; */
    height: 65px !important;
    padding-left: 20px !important;
    padding-right: 20px !important;
    color:#005d0d !important;
    width: auto !important;
}

.btn-options:hover{
    /* border-color: #16361c; */
    /* background-color: #285430; */
    color: #005d0d !important;
    border-width: 1.5px !important;
    border-color: #005d0d !important;
    /* background: linear-gradient(to right, #74b67d 20%, #c1f9ae 60%) !important; */
    /* box-shadow: 1px 8px 24px -2px rgba(0,0,0,0.48) !important; */
    /* border-width:6px; */
    
}

.carousel-indicators [data-bs-target] { 
    width: 10px !important;
    height: 10px !important;
    border-radius: 100% !important;
}

.hp-pic-car{
    /* width: 100% !important;
    border-radius: 50% !important;
     */
     border: 0px solid !important;
     /* border-color: #74b67d !important;  */
     background: linear-gradient(to right top, #3fa81c, #79ff8b);
     padding: 3px !important;
     /* box-shadow: -5px -4px 25px -17px rgba(0,0,0,0.75) !important; */
}

.mathPicture{
    position: absolute !important;
    width:320px !important;
    height: 213px !important;
    
    top:100px !important;
    left:520px !important;
    
    z-index: -1 !important; 
    opacity: 40% !important; 
}
/* ... */

